yaml/deploy/hadoop/spark-notebook/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-spark-notebook
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx-spark-notebook
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-spark-notebook
    spec:
      containers:
      - name: nginx-spark-notebook
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf-spark-notebook
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf-spark-notebook
        configMap:
          name: nginx-conf-spark-notebook
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: spark-notebook-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-spark-notebook
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: spark-notebook-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
   - hosts:
      - spark-notebook.congcu24h.com #domain
     secretName:  test-domain-tls
  rules:
  - host: spark-notebook.congcu24h.com #domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-notebook-service
            port:
              number: 8080
